<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Registro</string>
    <string name="hello_world">Hello world!</string>
    <string name="registro_main_tv_nombre">Nombre:</string>
    <string name="registro_main_tv_contrasena">Contraseña: </string>
    <string name="registro_main_btn_aceptar">Aceptar</string>
    <string name="registro_main_et_nombre">Carlos</string>
    <string name="registro_main_et_contrasena">*******</string>
    <string name="title_activity_saludo">SaludoActivity</string>
    <string name="saludo_activity_saludo">Hola: </string>
    <string name="registro_main_et_registrate">Registrate</string>
    <string name="title_activity_registrarse">RegistrarseActivity</string>

</resources>